mobiel menu notification menu updated

--- a/freelance-landing-page.html
+++ b/freelance-landing-page.html
@@ -427,8 +427,8 @@
                     src="./assets/images/freelance-landing-page/icons/category-icon-1.svg"
                     alt=""
                   />
-                  <h4>Branding</h4>
-                  <p>Craft compelling brand stories for your clients.</p>
+                  <h4>Logo design</h4>
+                  <p>Create unique and memorable logos for businesses.</p>
                   <a href="">Explore more</a>
                 </div>
               </div>
@@ -438,8 +438,8 @@
                     src="./assets/images/freelance-landing-page/icons/category-icon-1.svg"
                     alt=""
                   />
-                  <h4>Branding</h4>
-                  <p>Craft compelling brand stories for your clients.</p>
+                  <h4>Graphic design</h4>
+                  <p>Turn concepts into vivid and impactful visual designs.</p>
                   <a href="">Explore more</a>
                 </div>
               </div>
@@ -449,8 +449,8 @@
                     src="./assets/images/freelance-landing-page/icons/category-icon-1.svg"
                     alt=""
                   />
-                  <h4>Branding</h4>
-                  <p>Craft compelling brand stories for your clients.</p>
+                  <h4>Iconography</h4>
+                  <p>Convey complex ideas with succinct icons.</p>
                   <a href="">Explore more</a>
                 </div>
               </div>
@@ -498,9 +498,9 @@
             <div
               class="freelance_experience_content step_2 d-flex flex-column justify-content-end"
             >
-              <p>Step 1</p>
-              <h3>Apply for job</h3>
-              <h6>Find suitable projects and express your interest.</h6>
+              <p>Step 2</p>
+              <h3>Sign an agreement</h3>
+              <h6>Set your terms with a signed business agreement.</h6>
             </div>
           </div>
           <div class="col-12 col-md-3 position-relative">
@@ -513,9 +513,9 @@
             <div
               class="freelance_experience_content step_3 d-flex flex-column justify-content-end"
             >
-              <p>Step 1</p>
-              <h3>Apply for job</h3>
-              <h6>Find suitable projects and express your interest.</h6>
+              <p>Step 3</p>
+              <h3>Work in progress</h3>
+              <h6>Work each project milestone to perfection.</h6>
             </div>
             <span
               ><img
@@ -534,9 +534,11 @@
             <div
               class="freelance_experience_content step_4 d-flex flex-column justify-content-end"
             >
-              <p>Step 1</p>
-              <h3>Apply for job</h3>
-              <h6>Find suitable projects and express your interest.</h6>
+              <p>Step 4</p>
+              <h3>Payment done</h3>
+              <h6>
+                Experience smooth and secure transactions upon completion.
+              </h6>
             </div>
           </div>
         </div>
@@ -579,7 +581,7 @@
                     <img src="https://via.placeholder.com/28x28" alt="" />
                   </div>
                   <div class="commentor_name">
-                    <h3>Ebony Jones</h3>
+                    <h3>Sean Farmer</h3>
                     <h4>Head of marketing</h4>
                   </div>
                 </div>
@@ -592,9 +594,8 @@
                     alt=""
                 /></span>
                 <p>
-                  We couldn’t find a freelancer that met our expectation until
-                  we turned to Alt Tribe. Managing the the project on the
-                  platform was an added bonus.
+                  Thanks to the projects we did on Alt tribe, we were able to
+                  launch our business three months earlier than planned.
                 </p>
                 <div
                   class="commentor_details d-flex justify-content-start align-items-start"
@@ -616,9 +617,8 @@
                     alt=""
                 /></span>
                 <p>
-                  We couldn’t find a freelancer that met our expectation until
-                  we turned to Alt Tribe. Managing the the project on the
-                  platform was an added bonus.
+                  Milestones are so easy to define and track on Alt tribe that
+                  you don’t really struggle with the direction of the project.
                 </p>
                 <div
                   class="commentor_details d-flex justify-content-start align-items-start"
@@ -627,8 +627,8 @@
                     <img src="https://via.placeholder.com/28x28" alt="" />
                   </div>
                   <div class="commentor_name">
-                    <h3>Ebony Jones</h3>
-                    <h4>Head of marketing</h4>
+                    <h3>Jane Doe</h3>
+                    <h4>Project manager</h4>
                   </div>
                 </div>
               </div>
@@ -865,7 +865,12 @@
                     class="accordion-collapse collapse"
                     data-bs-parent="#accordionExample"
                   >
-                    <div class="accordion-body">Is Alt tribe free?</div>
+                    <div class="accordion-body">
+                      We at Alt tribe run a thorough verification for anyone who
+                      signs up. Furthermore, we have a points system that
+                      promotes only the very best talent to the higher levels
+                      like Star and Superstar.
+                    </div>
                   </div>
                 </div>
                 <div class="accordion-item">
@@ -886,7 +891,12 @@
                     class="accordion-collapse collapse"
                     data-bs-parent="#accordionExample"
                   >
-                    <div class="accordion-body">Is Alt tribe free?</div>
+                    <div class="accordion-body">
+                      We at Alt tribe run a thorough verification for anyone who
+                      signs up. Furthermore, we have a points system that
+                      promotes only the very best talent to the higher levels
+                      like Star and Superstar.
+                    </div>
                   </div>
                 </div>
               </div>
@@ -961,7 +971,7 @@
           dots: false,
           infinite: true,
           speed: 300,
-          slidesToShow: 4,
+          slidesToShow: 3,
           centerMode: false,
           adaptiveHeight: true,
           variableWidth: false,
