--- a/about-us-page.html
+++ b/about-us-page.html
@@ -205,7 +205,7 @@
       <div class="container-xxl">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-6">
-            <div class="section_title pb-4 text-start pb-md-0">
+            <div class="section_title text-start pb-md-0">
               <h5>Origin story</h5>
               <h2>
                 Crafting success <br />
