search page done

--- a/business-landing-page.html
+++ b/business-landing-page.html
@@ -1125,7 +1125,9 @@
             <div
               class="footer_nav d-flex flex-column align-items-start align-items-md-end"
             >
-              <ul class="d-flex gap-3 justify-content-end">
+              <ul
+                class="d-flex flex-wrap gap-3 justify-content-start justify-content-lg-end"
+              >
                 <li><a href="/#">About us</a></li>
                 <li><a href="/#">FAQ</a></li>
                 <li><a href="/#">Terms & Conditions</a></li>
