event page creation done

--- a/freelancer/onboarding/step-page-add-works.html
+++ b/freelancer/onboarding/step-page-add-works.html
@@ -179,6 +179,7 @@
                     placeholder="Enter your work name"
                   />
                 </div>
+                <!-- tags  -->
                 <div class="mb-4">
                   <label class="input-label" for="add-tags">Add tags</label>
 
@@ -198,6 +199,7 @@
                     <option>Add tags 7</option>
                   </select>
                 </div>
+
                 <div class="mb-2">
                   <label for="description" class="input-label"
                     >Description
@@ -260,12 +262,6 @@
     </div>
     <!-- js links  -->
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-
     <script>
       function initializeTooltips() {
         const tooltipTriggerList = document.querySelectorAll(
@@ -301,6 +297,7 @@
       });
     </script>
     <!-- multi select script initiate  -->
+    <script src="../../assets/vendor/js/bootstrap.bundle.min.js"></script>
     <script src="../../assets/vendor/js/jquery-3.5.1.slim.min.js"></script>
     <script src="../../assets/vendor/js/popper.min.js"></script>
     <script src="../../assets/vendor/js/bootstrap.min.js"></script>
