--- a/search-page.html
+++ b/search-page.html
@@ -258,35 +258,38 @@
                   </button>
                   <ul class="dropdown-menu dropdown-menu-end">
                     <li>
-                      <button
-                        class="dropdown-item text-capitalize fs-6"
-                        type="button"
-                      >
+                      <button class="dropdown-item" type="button">
                         Recommended
                       </button>
                     </li>
                     <li>
-                      <button
-                        class="dropdown-item text-capitalize fs-6"
-                        type="button"
-                      >
-                        newest
+                      <button class="dropdown-item" type="button">
+                        Latest
                       </button>
                     </li>
                     <li>
-                      <button
-                        class="dropdown-item text-capitalize fs-6"
-                        type="button"
-                      >
-                        height to low
+                      <button class="dropdown-item" type="button">
+                        Oldest
                       </button>
                     </li>
                     <li>
-                      <button
-                        class="dropdown-item text-capitalize fs-6"
-                        type="button"
-                      >
-                        low to height
+                      <button class="dropdown-item" type="button">
+                        Low to high
+                      </button>
+                    </li>
+                    <li>
+                      <button class="dropdown-item" type="button">
+                        High to low
+                      </button>
+                    </li>
+                    <li>
+                      <button class="dropdown-item" type="button">
+                        Most entries
+                      </button>
+                    </li>
+                    <li>
+                      <button class="dropdown-item" type="button">
+                        Fewest entries
                       </button>
                     </li>
                   </ul>
