--- a/business-landing-page.html
+++ b/business-landing-page.html
@@ -1143,6 +1143,8 @@
       </div>
     </footer>
 
+    <button><i class="fa-solid fa-angle-right"></i></button>
+
     <script src="./assets/vendor/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/vendor/js/jquery-1.11.0.min.js"></script>
     <script src="./assets/vendor/js/jquery-migrate-1.2.1.min.js"></script>
