--- a/business/settings/business-setting-page.html
+++ b/business/settings/business-setting-page.html
@@ -1046,7 +1046,7 @@ bdb = business dashboard;
               <div class="row w-100">
                 <div class="col-12 col-lg-3">
                   <ul
-                    class="nav nav-pills d-flex flex-row flex-lg-column nav-pills align-items-start"
+                    class="nav nav-pills d-flex flex-row flex-lg-column align-items-start"
                     id="pills-tab"
                     role="tablist"
                   >
