event page working on pyblish

--- a/business/events/business-event-page.html
+++ b/business/events/business-event-page.html
@@ -1048,7 +1048,7 @@ bdb = business dashboard;
           <!-- sidebar left end -->
 
           <!-- main content start -->
-          <div class="col-12 col-lg-10">
+          <div class="col-12 col-lg-10 pb-5">
             <!-- tab content start here  -->
             <div class="event_page_content">
               <ul
