event page done!

--- a/business/events/business-event-page.html
+++ b/business/events/business-event-page.html
@@ -1860,20 +1860,245 @@ bdb = business dashboard;
                   </div>
                 </div>
                 <div
-                  class="tab-pane fade bg-warning"
+                  class="tab-pane fade pb-5"
                   id="published-event"
                   role="tabpanel"
                   aria-labelledby="published-event-tab"
                 >
-                  Published
+                  <!-- single event card -->
+                  <div class="row gy-4">
+                    <div class="col-12 col-sm-6 col-md-6 col-xl-4">
+                      <div
+                        class="single_event_card_wrapper rounded-3 bg-alt-bg-clr"
+                      >
+                        <div class="card_image_thumb">
+                          <img
+                            src="../../assets/images/business-dashboard/events-page/card_img_1.jpg"
+                            class="img-fluid"
+                            alt=""
+                          />
+                        </div>
+                        <div class="p-3">
+                          <div
+                            class="card_avater mb-3 d-flex gap-2 align-items-start"
+                          >
+                            <div class="">
+                              <h4>DesignSpectra Expo</h4>
+                            </div>
+                          </div>
+                          <div class="card_tags">
+                            <span
+                              class="online alt-badge alt-completed text-capitalize"
+                              >online</span
+                            >
+                            <span class="registration text-capitalize"
+                              >registration fee</span
+                            >
+                            <span class="registration_fee">$20</span>
+                          </div>
+                          <div class="date_time mt-3">
+                            <span><i class="fa-regular fa-calendar"></i></span>
+                            <span>Nov 12, 9:00am - Nov 12, 10:00pm, 2023</span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-6 col-xl-4">
+                      <div
+                        class="single_event_card_wrapper rounded-3 bg-alt-bg-clr"
+                      >
+                        <div class="card_image_thumb">
+                          <img
+                            src="../../assets/images/business-dashboard/events-page/card_img_1.jpg"
+                            class="img-fluid"
+                            alt=""
+                          />
+                        </div>
+                        <div class="p-3">
+                          <div
+                            class="card_avater mb-3 d-flex gap-2 align-items-start"
+                          >
+                            <div class="">
+                              <h4>PixelFusion Festival</h4>
+                            </div>
+                          </div>
+                          <div class="card_tags">
+                            <span
+                              class="online alt-badge alt-completed text-capitalize"
+                              >online</span
+                            >
+                            <span class="registration text-capitalize"
+                              >registration fee</span
+                            >
+                            <span class="registration_fee">$20</span>
+                          </div>
+                          <div class="date_time mt-3">
+                            <span><i class="fa-regular fa-calendar"></i></span>
+                            <span>Nov 12, 9:00am - Nov 12, 10:00pm, 2023</span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div
-                  class="tab-pane fade bg-info"
+                  class="tab-pane fade pb-5"
                   id="registered-event"
                   role="tabpanel"
                   aria-labelledby="registered-event-tab"
                 >
-                  Registered
+                  <div class="row gy-4">
+                    <div class="col-12 col-sm-6 col-md-6 col-xl-4">
+                      <div
+                        class="single_event_card_wrapper rounded-3 bg-alt-bg-clr"
+                      >
+                        <div class="card_image_thumb">
+                          <img
+                            src="../../assets/images/business-dashboard/events-page/card_img_1.jpg"
+                            class="img-fluid"
+                            alt=""
+                          />
+                        </div>
+                        <div class="p-3">
+                          <div
+                            class="card_avater mb-3 d-flex gap-2 align-items-start"
+                          >
+                            <img
+                              src="https://i.pravatar.cc/48"
+                              class="rounded-circle flex-shrink-0 img-fluid"
+                              alt=""
+                            />
+                            <div class="">
+                              <p>WJ Studio</p>
+                              <h4>DesignSpectra Challenge</h4>
+                            </div>
+                          </div>
+                          <div class="card_tags">
+                            <span
+                              class="online alt-badge alt-completed text-capitalize"
+                              >online</span
+                            >
+                            <span class="registration text-capitalize"
+                              >registration fee</span
+                            >
+                            <span class="registration_fee">$20</span>
+                          </div>
+                          <div class="date_time mt-3">
+                            <span><i class="fa-regular fa-calendar"></i></span>
+                            <span>Nov 12, 9:00am - Nov 12, 10:00pm, 2023</span>
+                          </div>
+                          <div
+                            class="card_footer mt-3 pt-3 border-top border-light-subtle d-flex gap-3 justify-content-end align-items-center"
+                          >
+                            <button class="card_register_now_btn">View</button>
+                            <button class="card_bookmark">
+                              <i class="fa-regular fa-bookmark"></i>
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-6 col-xl-4">
+                      <div
+                        class="single_event_card_wrapper rounded-3 bg-alt-bg-clr"
+                      >
+                        <div class="card_image_thumb">
+                          <img
+                            src="../../assets/images/business-dashboard/events-page/card_img_1.jpg"
+                            class="img-fluid"
+                            alt=""
+                          />
+                        </div>
+                        <div class="p-3">
+                          <div
+                            class="card_avater mb-3 d-flex gap-2 align-items-start"
+                          >
+                            <img
+                              src="https://i.pravatar.cc/48"
+                              class="rounded-circle flex-shrink-0 img-fluid"
+                              alt=""
+                            />
+                            <div class="">
+                              <p>WJ Studio</p>
+                              <h4>DesignSpectra Challenge</h4>
+                            </div>
+                          </div>
+                          <div class="card_tags">
+                            <span
+                              class="online alt-badge alt-completed text-capitalize"
+                              >online</span
+                            >
+                            <span class="registration text-capitalize"
+                              >registration fee</span
+                            >
+                            <span class="registration_fee">$20</span>
+                          </div>
+                          <div class="date_time mt-3">
+                            <span><i class="fa-regular fa-calendar"></i></span>
+                            <span>Nov 12, 9:00am - Nov 12, 10:00pm, 2023</span>
+                          </div>
+                          <div
+                            class="card_footer mt-3 pt-3 border-top border-light-subtle d-flex gap-3 justify-content-end align-items-center"
+                          >
+                            <button class="card_register_now_btn">View</button>
+                            <button class="card_bookmark">
+                              <i class="fa-regular fa-bookmark"></i>
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-6 col-xl-4">
+                      <div
+                        class="single_event_card_wrapper rounded-3 bg-alt-bg-clr"
+                      >
+                        <div class="card_image_thumb">
+                          <img
+                            src="../../assets/images/business-dashboard/events-page/card_img_1.jpg"
+                            class="img-fluid"
+                            alt=""
+                          />
+                        </div>
+                        <div class="p-3">
+                          <div
+                            class="card_avater mb-3 d-flex gap-2 align-items-start"
+                          >
+                            <img
+                              src="https://i.pravatar.cc/48"
+                              class="rounded-circle flex-shrink-0 img-fluid"
+                              alt=""
+                            />
+                            <div class="">
+                              <p>WJ Studio</p>
+                              <h4>DesignSpectra Challenge</h4>
+                            </div>
+                          </div>
+                          <div class="card_tags">
+                            <span
+                              class="online alt-badge alt-completed text-capitalize"
+                              >online</span
+                            >
+                            <span class="registration text-capitalize"
+                              >registration fee</span
+                            >
+                            <span class="registration_fee">$20</span>
+                          </div>
+                          <div class="date_time mt-3">
+                            <span><i class="fa-regular fa-calendar"></i></span>
+                            <span>Nov 12, 9:00am - Nov 12, 10:00pm, 2023</span>
+                          </div>
+                          <div
+                            class="card_footer mt-3 pt-3 border-top border-light-subtle d-flex gap-3 justify-content-end align-items-center"
+                          >
+                            <button class="card_register_now_btn">View</button>
+                            <button class="card_bookmark">
+                              <i class="fa-regular fa-bookmark"></i>
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
