tribe page done

--- a/business/tribe/business-tribe-page.html
+++ b/business/tribe/business-tribe-page.html
@@ -2045,7 +2045,7 @@ bdb = business dashboard;
                   </div>
                 </div>
                 <div
-                  class="tab-pane fade pb-5"
+                  class="tab-pane fade"
                   id="MyAgreements"
                   role="tabpanel"
                   aria-labelledby="two-tab"
