business save page working

--- a/business/saved/business-saved-page.html
+++ b/business/saved/business-saved-page.html
@@ -1233,6 +1233,15 @@ bdb = business dashboard;
                             </div>
                           </div>
                         </div>
+                      </div>
+                    </div>
+                    <div
+                      class="tab-pane fade pb-5"
+                      id="tribes"
+                      role="tabpanel"
+                      aria-labelledby="tribes-tab"
+                    >
+                      <div class="main_filter_container">
                         <!-- single filter item  -->
                         <div
                           class="single_filter_option position-relative w-100 d-flex flex-column flex-md-row gap-3 mb-3"
@@ -1341,14 +1350,6 @@ bdb = business dashboard;
                           </div>
                         </div>
                       </div>
-                    </div>
-                    <div
-                      class="tab-pane fade pb-5"
-                      id="tribes"
-                      role="tabpanel"
-                      aria-labelledby="tribes-tab"
-                    >
-                      <div class="">Tribes (3)</div>
                     </div>
                     <div
                       class="tab-pane booking_section fade pb-5"
